--- a/web-shop-backend/package.json
+++ b/web-shop-backend/package.json
@@ -6,7 +6,8 @@
     "start": "node ./app.js",
     "dev": "nodemon ./dist/app.js",
     "watch": "tsc -w",
-    "test": "mocha -r ts-node/register ./tests/*.ts"
+    "test": "mocha -r ts-node/register ./tests/*.ts",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "@types/multer": "^1.4.5",
@@ -21,11 +22,14 @@
     "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "metadata": "^0.1.0",
     "mock-session": "^0.0.5",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "pg": "^8.5.1",
-    "redis": "^3.0.2"
+    "redis": "^3.0.2",
+    "reflect": "^0.1.3",
+    "typeorm": "^0.2.32"
   },
   "devDependencies": {
     "@types/chai": "^4.2.16",
