--- a/web-shop-frontend/package.json
+++ b/web-shop-frontend/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.1",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "universal-cookie": "^4.0.4"
   },
   "license": "MIT",
